# hanoi-bench

./: .gitignore  README.md  docker-compose.yml  package.json  playwright.config.ts
.github/workflows/: benchmark-and-site.yml
.turbo/cache/: 463bb98dc387e223-meta.json  463bb98dc387e223.tar.zst  6437f7b838e83cae-meta.json  6437f7b838e83cae.tar.zst  db0a7c13e8ecfc96-meta.json  db0a7c13e8ecfc96.tar.zst
backend/go/: .dockerignore  .gitignore  Dockerfile  go.mod  handlers.go  main.go
backend/go/hanoi/: hanoi.go  hanoi_test.go
backend/rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/rust/src/: handlers.rs  lib.rs  main.rs
e2e/: animate.spec.ts  benchmark.ts  constants.ts  error.spec.ts  smoke.spec.ts  table.spec.ts
e2e/scripts/: aggregate-benchmark-results.mjs
frontend/tanstack-solid/: .cta.json  .gitignore  Dockerfile  README.md  package.json  vite.config.ts
frontend/tanstack-solid/.output/: nitro.json
frontend/tanstack-solid/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/waku/: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  components.json  eslint.config.js  package.json  playwright.config.ts  tailwind-eslint.css  tsconfig.json  waku.config.ts
frontend/waku/e2e/: README.md  animate.spec.ts  benchmark.ts  constants.ts  debug-animate.ts  error.spec.ts  smoke.spec.ts  table.spec.ts
frontend/waku/src/: pages.gen.ts
results-site/: README.md  package-lock.json  package.json
results-site/public/: benchmark-results.json
scripts/: run-all-benchmarks.sh
(+52 files in other folders)
